third_party/move/move-compiler/tests/move_check/locals/struct_use_before_assign.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/locals/struct_use_before_assign.move:6:27
  │
5 │         let g: u64;
  │             - The variable 'g' does not have a value. The variable must be assigned a value before being used.
6 │         let r = R { f: 3, g };
  │                           ^ Invalid usage of unassigned variable 'g'

warning[W09003]: unused assignment
  ┌─ tests/move_check/locals/struct_use_before_assign.move:8:13
  │
8 │         let z = y;
  │             ^ Unused assignment or binding for local 'z'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_z')

warning[W09003]: unused assignment
  ┌─ tests/move_check/locals/struct_use_before_assign.move:9:13
  │
9 │         let q = x;
  │             ^ Unused assignment or binding for local 'q'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_q')

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/struct_use_before_assign.move:15:31
   │
14 │         let y0: u64;
   │             -- The variable 'y0' does not have a value. The variable must be assigned a value before being used.
15 │         let r = R { f: x0, g: y0 };
   │                               ^^ Invalid usage of unassigned variable 'y0'

warning[W09003]: unused assignment
   ┌─ tests/move_check/locals/struct_use_before_assign.move:17:13
   │
17 │         let z = y;
   │             ^ Unused assignment or binding for local 'z'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_z')

warning[W09003]: unused assignment
   ┌─ tests/move_check/locals/struct_use_before_assign.move:18:13
   │
18 │         let q = x;
   │             ^ Unused assignment or binding for local 'q'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_q')

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/struct_use_before_assign.move:23:32
   │
22 │         let r: R;
   │             - The variable 'r' does not have a value. The variable must be assigned a value before being used.
23 │         let R { f: x, g: y } = r;
   │                                ^ Invalid usage of unassigned variable 'r'

warning[W09003]: unused assignment
   ┌─ tests/move_check/locals/struct_use_before_assign.move:24:13
   │
24 │         let z = y;
   │             ^ Unused assignment or binding for local 'z'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_z')

warning[W09003]: unused assignment
   ┌─ tests/move_check/locals/struct_use_before_assign.move:25:13
   │
25 │         let q = x;
   │             ^ Unused assignment or binding for local 'q'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_q')

warning[W09003]: unused assignment
   ┌─ tests/move_check/locals/struct_use_before_assign.move:30:13
   │
30 │         let z = y;
   │             ^ Unused assignment or binding for local 'z'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_z')

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/struct_use_before_assign.move:30:17
   │
29 │         let R { f: x, g: y };
   │                          - The variable 'y' does not have a value. The variable must be assigned a value before being used.
30 │         let z = y;
   │                 ^ Invalid usage of unassigned variable 'y'

warning[W09003]: unused assignment
   ┌─ tests/move_check/locals/struct_use_before_assign.move:31:13
   │
31 │         let q = x;
   │             ^ Unused assignment or binding for local 'q'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_q')

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/struct_use_before_assign.move:31:17
   │
29 │         let R { f: x, g: y };
   │                    - The variable 'x' does not have a value. The variable must be assigned a value before being used.
30 │         let z = y;
31 │         let q = x;
   │                 ^ Invalid usage of unassigned variable 'x'

